samples/_failures_safe/1761396939_aca67d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10118434.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_10118434.c:180:13: error: expected expression at end of input
  180 |             current_state =
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_10118434.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10118434.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10118434.c:180:13: error: expected declaration or statement at end of input
